# winapi-snippets-cmake

./: .gitignore  CMakeLists.txt  README.org  cmake-build.bat
src/: base64.cpp  guiBasic1.cpp  guiBasicNOWinmain.cpp  icon.rc  windowsVersion.cpp  winhttp.cpp
